--- a/nautic/articles/templates/articles/articles_list.html
+++ b/nautic/articles/templates/articles/articles_list.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Article list</title>
-  </head>
-  <body>
+{% extends 'base_layout.html' %}
+{% block content %}
     <h1>here is the Articles List</h1>
     <div class="articles">
       {% for article in articles %}
         <div class="article">
-          <a href="#"><h2>{{article.title}}</h2></a>
+          <a href="{% url 'article:detail' slug=article.slug %}"><h2>{{article.title}}</h2></a>
           <p>{{article.snippet}}</p
           <p>{{article.date}}</p>
         </div>
       {% endfor %}
     </div>
-  </body>
-</html>
+{% endblock %}
