--- a/nautic/assets/styles.css
+++ b/nautic/assets/styles.css
@@ -1,21 +1,20 @@
 body{
-  background-color: #091117  ;
-  background-image: url() ;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #fff;
+    background-color: #0f121f;
+    background-image: url();
+    background-repeat-y: no-repeat;
+    color: #fff;
 }
 
-body*{
-  font-family: Ubuntu;
+body *{
+    font-family: Ubuntu;
 }
 
 h1, h2, h3, h4, h5{
-  font-weight: normal;
-  margin: 0;
+    font-weight: normal;
+    margin: 0;
 }
 
 a, a:hover, a:visited{
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
