--- a/nautic/accounts/templates/accounts/login.html
+++ b/nautic/accounts/templates/accounts/login.html
@@ -2,9 +2,9 @@
 
 {% block content %}
   <h1>Signup</h1>
-  <form class="site-form" action="{%url 'accounts:signup' %}" method="post">
+  <form class="site-form" action="{%url 'accounts:login'%}" method="post">
     {% csrf_token %}
     {{form}}
-    <input type="submit" value="Signup">
+    <input type="submit" value="Login">
   </form>
 {% endblock %}
