--- a/nautic/templates/base_layout.html
+++ b/nautic/templates/base_layout.html
@@ -13,6 +13,13 @@
         <img style="width:300px;height:150px" src="{% static 'nautics.jpg' %}" alt="">
       </a>
     </h1>
+    <nav>
+      <li>
+        <form class="logout-link" action="{% url 'accounts:logout'%}" method="post">
+          <button type="submit">Logout</button>
+        </form>
+      </li>
+    </nav>
     {% block content %}
     {% endblock %}
   </body>
